--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "Vishal Sharma",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.3.2",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
