--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,10 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
     "next": "13.4.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "socket.io-client": "^4.7.2"
   }
 }
